RWAT/Content/Site.css
/*MY OWN CSS*/

.links {
    display: inline-block;
    padding: 5px;
    background-color: lavender;
}


#headerwrapper {
    margin-top: 5px;
}

#noquestionsavailablemsg {
    height: auto;
    margin-top: 3%;
    margin-left: 20%;
}

#questions {
    height: auto;margin-left: 20%;padding-bottom: 100px;
}

.questionindexdescription {
    display: inline-block;
    text-overflow: ellipsis;
    word-wrap: break-word;
    white-space: nowrap;
    width: 300px;
    overflow: hidden;
}

.eachquestion {
    background-color: lavender;
    margin-top: 10px;
    width: inherit;
    height: auto;
}

.numberanswerbox {
    height: 60px;
    width: auto;
    background-color: sandybrown;
    margin-left: 10px;
}

.numberofanswers {
    margin-top: 0px;
    text-align: center;
    color: black;
    background-color: cornsilk;
}

.numberofanswerstext {
  display: inline-block;margin-top: -10px;  
}


#Answer {
    width: 400px;
    height: 200px;
}

#answerboxwrapper {
    margin-top: 20px;width: inherit;height: auto;
}

#fieldsetwrapper {
    width: auto;
}

#homewelcomemsg {
    margin-top: 2%;
}
    
#askquestionwrapper {
    margin-left: 20%;margin-top: 10px;
}

/* .roundedcorners was gotten from: http://jonraasch.com/blog/css-rounded-corners-in-all-browsers            */
    .roundedcorners {
    padding: 5px;
    -moz-border-radius: 15px;
    -webkit-border-radius: 15px;
    -khtml-border-radius: 215px;
    border-radius: 15px;
}

#registerwrapper {
    width: auto;
    background-color: lavender;
    padding: 5px;
}

#loginwrapper {
    width: auto;
    background-color: lavender;
    margin-top: 10px;
    padding: 5px;
}

#questioncontainer {
    margin-left:20%;margin-top: 5%;padding-bottom: 100px;
}

#questiontitle {
    border-bottom: 1px solid lavender;
    word-wrap: break-word;
    word-break: break-all;
}

.votewrapper {
    display: inline-block;
    width: auto;
    margin-left: 0px;
    padding-right: 4px;
}

.currentvote {
    font-size: large;
    text-align: center;

}

#questiondescription {
    height:auto;margin-right: 5px; display: inline-block;word-wrap: break-word;
}

.questionanswerpanel{
    width: auto;background-color: lavender;padding: 5px;margin-top: 20px;float: right;
}

.questionanswerpanel img {
    display: inline-block;height:20px;width: 20px;
}

.questionanswerpanel .username {
    display: inline-block;
}

.questionanswerpanel .datetimewrapper{
    display: inline-block;
}

.questionanswerpanel .datetimewrapper .datetime{
    font-weight: bold; display: inline-block;
}

#divider {
    width: inherit;border-bottom: 1px solid lavender;margin-top: 5px;
}

#answerscontainer{
    height: auto;margin-top: 10%;
}

#answersheading {
}

.answerpanel {
    width: inherit;
}

.answerbody {
    height:auto;margin-right: 35px;padding-right: 10px; display: inline-block;word-wrap: break-word;
}

.voteimages {
    height:30px;width:30px
}


.createquestiondescription {
    width: 200px;
    height: 200px;
}

/*----------------------------------------------------------
DEFAULT CSS The base color for this template is #5c87b2. If you'd like
to use a different color start by replacing all instances of
#5c87b2 with your new color.
----------------------------------------------------------*/
body {
    background-color: white;
    font-size: .85em;
    font-family: "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
    margin: 0;
    padding: 0;
    color: #696969;
}

a:link {
    color: #034af3;
    text-decoration: underline;
}

a:visited {
    color: #505abc;
}

a:hover {
    color: black;
    text-decoration: none;
}

a:active {
    color: #12eb87;
}

p, ul {
    margin-bottom: 20px;
    line-height: 1.6em;
}

header,
footer,
nav,
section {
    display: block;
}

/* HEADINGS   
----------------------------------------------------------*/
h1, h2, h3, h4, h5, h6 {
    font-size: 1.5em;
    color: #000;
}

h1 {
    font-size: 2em;
    padding-bottom: 0;
    margin-bottom: 0;
}

h2 {
    padding: 0 0 10px 0;
}

h3 {
    font-size: 1.2em;
}

h4 {
    font-size: 1.1em;
}

h5, h6 {
    font-size: 1em;
}

/* PRIMARY LAYOUT ELEMENTS   
----------------------------------------------------------*/

/* you can specify a greater or lesser percentage for the 
page width. Or, you can specify an exact pixel width. */
.page {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

header, #header {
    position: relative;
    margin-bottom: 0px;
    color: #000;
    padding: 0;
}

header h1, #header h1 {
    font-weight: bold;
    padding: 5px 0;
    margin: 0;
    color: #fff;
    border: none;
    line-height: 2em;
    font-size: 32px !important;
    text-shadow: 1px 1px 2px #111;
}

#main {
    padding: 30px 30px 15px 30px;
    background-color: #fff;
    -webkit-border-radius: 4px 0 0 0;
    -moz-border-radius: 4px 0 0 0;
    border-radius: 4px 0 0 0;
}

footer, 
#footer {
    background-color: #fff;
    color: #999;
    padding: 10px 0;
    text-align: center;
    line-height: normal;
    margin: 0 0 30px 0;
    font-size: .9em;
    -webkit-border-radius: 0 0 4px 4px;
    -moz-border-radius: 0 0 4px 4px;
    border-radius: 0 0 4px 4px;
}

/* TAB MENU   
----------------------------------------------------------*/
ul#menu {
    border-bottom: 1px #5C87B2 solid;
    padding: 0 0 2px;
    position: relative;
    margin: 0;
    text-align: right;
}

ul#menu li {
    display: inline;
    list-style: none;
}

ul#menu li#greeting {
    padding: 10px 20px;
    font-weight: bold;
    text-decoration: none;
    line-height: 2.8em;
    color: #fff;
}

ul#menu li a {
    padding: 10px 20px;
    font-weight: bold;
    text-decoration: none;
    line-height: 2.8em;
    background-color: #e8eef4;
    color: #034af3;
    -webkit-border-radius: 4px 4px 0 0;
    -moz-border-radius: 4px 4px 0 0;
    border-radius: 4px 4px 0 0;
}

ul#menu li a:hover {
    background-color: #fff;
    text-decoration: none;
}

ul#menu li a:active {
    background-color: #a6e2a6;
    text-decoration: none;
}

ul#menu li.selected a {
    background-color: #fff;
    color: #000;
}

/* FORM LAYOUT ELEMENTS   
----------------------------------------------------------*/

fieldset {
    border: 1px solid #ddd;
    padding: 0 1.4em 1.4em 1.4em;
    margin: 0 0 1.5em 0;
}

legend {
    font-size: 1.2em;
    font-weight: bold;
}

textarea {
    min-height: 75px;
}

input[type="text"], 
input[type="password"] {
    border: 1px solid #ccc;
    padding: 2px;
    font-size: 1.2em;
    color: #444;
    width: 200px;
    height: 30px;
}

select {
    border: 1px solid #ccc;
    padding: 2px;
    font-size: 1.2em;
    color: #444;
}

input[type="submit"] {
    font-size: 1.2em;
    padding: 5px;
}

/* TABLE
----------------------------------------------------------*/

table {
    border: solid 1px #e8eef4;
    border-collapse: collapse;
}

table td {
    padding: 5px;
    border: solid 1px #e8eef4;
}

table th {
    padding: 6px 5px;
    text-align: left;
    background-color: #e8eef4;
    border: solid 1px #e8eef4;
}

/* MISC  
----------------------------------------------------------*/
.clear {
    clear: both;
}

.error {
    color: Red;
}

nav, 
#menucontainer {
    margin-top: 40px;
}

div#title {
    display: block;
    float: left;
    text-align: left;
}

#logindisplay {
    font-size: 1.1em;
    display: block;
    text-align: right;
    margin: 10px;
    color: White;
}

#logindisplay a:link {
    color: white;
    text-decoration: underline;
}

#logindisplay a:visited {
    color: white;
    text-decoration: underline;
}

#logindisplay a:hover {
    color: white;
    text-decoration: none;
}

/* Styles for validation helpers
-----------------------------------------------------------*/
.field-validation-error {
    color: #ff0000;
}

.field-validation-valid {
    display: none;
}

.input-validation-error {
    border: 1px solid #ff0000;
    background-color: #ffeeee;
}

.validation-summary-errors {
    font-weight: bold;
    color: #ff0000;
}

.validation-summary-valid {
    display: none;
}

/* Styles for editor and display helpers
----------------------------------------------------------*/
.display-label, 
.editor-label {
    margin: 1em 0 0 0;
}

.display-field, 
.editor-field {
    margin: 0.5em 0 0 0;
}

.text-box {
    width: 30em;
}

.text-box.multi-line {
    height: 6.5em;
}

.tri-state {
    width: 6em;
}

